--- a/green-telebubbie.html
+++ b/green-telebubbie.html
@@ -1,2 +1,12 @@
+<head>
+    <meta charset="utf-8>
+    <meta name="description" content="test page">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <title>Green Telebubbie</title>
+</head>
+<body>
 <h1>Hello</h1>
 <p>Dream is a Green Telebubbie</p>
+</body>
