Update and rename green-telebubbie.html to home.html

--- a/home.html
+++ b/home.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="shortcut icon" type="image/png" href="green-man.png">
-    <title>Green Telebubbie</title>
+    <title>Character stuff lolz</title>
 </head>
 <body>
 <h1>Hello</h1>
-<p>Dream is a Green Telebubbie</p>
+<p>Dream is normal looking y'all just were hyped up lmao</p>
 </body>
