--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <meta name="description" content="test page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="shortcut icon" type="image/png" href="green-man.png">
+    <link rel="shortcut icon" type="image/png" href="Pf.png">
     <title>Character stuff lolz</title>
 </head>
 <body>
