--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="shortcut icon" type="image/png" href="https://faliouca.github.io/Pf.png">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="main.css">
     <title>Character stuff lolz</title>
 </head>
 <body>
