--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-<h1>Hello</h1>
-<p>Dream is normal looking y'all just were hyped up lmao</p>
+    <box>
+        <h1>Hello</h1>
+        <p>Dream is normal looking y'all just were hyped up lmao</p>
+    </box>
 </body>
