--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <box>
-        <h1>Hello</h1>
-        <p>Dream is normal looking y'all just were hyped up lmao</p>
+        <h1 class="margin:auto;">Hello</h1>
+        <p class="margin:auto;">Dream is normal looking y'all just were hyped up lmao</p>
     </box>
 </body>
