--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
     <title>Character stuff lolz</title>
 </head>
-<body style="width:100%;">
+<body style="width:device-width;">
     <box>
         <h1 style="margin:auto;">Hello</h1>
         <p style="margin:auto;">Dream is normal looking y'all just were hyped up lmao</p>
