--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-    <box style="width:100%;">
-        <h1 style="margin:auto;">Hello</h1>
-        <p style="margin:auto;">Dream is normal looking y'all just were hyped up lmao</p>
+    <box style="width:100%;text-align:center;">
+        <h1>Hello</h1>
+        <p>Dream is normal looking y'all just were hyped up lmao</p>
     </box>
 </body>
