--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-    <box style="width:100%;text-align:center;">
+    <div style="width:100%;text-align:center;">
         <h1>Hello</h1>
         <p>Dream is normal looking y'all just were hyped up lmao</p>
-    </box>
+    </div>
 </body>
