--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
+    <div style="padding:20px;background-color:#FF8D74;color:#FFF;">
+        <h1>Faliouca</h1>
+    </div>
     <div style="width:100%;text-align:center;">
         <h1>Hello</h1>
         <p>Dream is normal looking y'all just were hyped up lmao</p>
