--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-    <div style="width:100%;padding:20px;background-color:#FF8D74;color:#FFF;">
+    <div style="width:100%;height:20%;padding:20px;background-color:#FF8D74;color:#FFF;">
         <h1>Faliouca</h1>
     </div>
     <div style="width:100%;text-align:center;">
