--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
     <title>Character stuff lolz</title>
 </head>
-<body>
+<body style="padding:20px;">
     <div style="width:100%;height:100px;padding:20px;background-color:#FF8D74;color:#FFF;">
         <h1>Faliouca</h1>
     </div>
