--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="main.css">
     <title>Character stuff lolz</title>
 </head>
-<body style="padding:20px;">
-    <div style="width:100%;height:100px;padding:20px;background-color:#FF8D74;color:#FFF;">
+<body>
+    <div style="width:100%;height:100px;padding:20px;background-color:#FF8D74;color:#FFF;margin:20px;">
         <h1>Faliouca</h1>
     </div>
     <div style="width:100%;text-align:center;">
