--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div style="width:100%;height:auto;min-height:100%;padding:20px;background-color:#FF8D74;color:#FFF;">
         <h1>Faliouca</h1>
+        <a href="#" style="float:right;">Characters</a>
     </div>
     <div style="width:100%;text-align:center;">
         <h1>Hello</h1>
