--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div style="width:100%;height:auto;min-height:100%;padding:20px;background-color:#FF8D74;color:#FFF;">
         <h1>Faliouca</h1>
-        <a href="#" class="clearfix text-white" style="float:right;">Characters</a>
+        <a href="#" class="clearfix" style="float:right;color:#FFF;">Characters</a>
     </div>
     <div style="width:100%;text-align:center;">
         <h1>Hello</h1>
