--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-    <div class='content' style="width: 50%; padding: 15px; text-align: center; position: relative;background-color:#FF8D74;color:#FFF;margin:10px;">
+    <div class='content' style="width:50%;padding:15px;text-align:center;position:relative;background-color:#FF8D74;color:#FFF;margin:10px;height:auto:min-height:100%;">
         <div class="noDown" style="position: absolute; right: 0;">ASDF!</div>
         Lorem ipsum...
     </div>​
