--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-    <div class='content' style="width:50%;padding:15px;text-align:center;position:relative;background-color:#FF8D74;color:#FFF;margin:10px;height:auto:min-height:100%;">
-        <div class="noDown" style="position: absolute; right: 0;">ASDF!</div>
-        Lorem ipsum...
-    </div>​
-    <div style="width:100%;height:auto;min-height:100%;padding:20px;background-color:#FF8D74;color:#FFF;">
+    <div class='content' style="width:100%;padding:15px;text-align:center;position:relative;background-color:#FF8D74;color:#FFF;margin:10px;height:auto:min-height:100%;">
+        <div class="noDown" style="position: absolute; right: 0;"><a href="#" class="clearfix" style="float:right;color:#FFF;height:10px;">Characters</a></div>
         <h1>Faliouca</h1>
-        <a href="#" class="clearfix" style="float:right;color:#FFF;height:10px;">Characters</a>
-    </div>
+    </div>​
     <div style="width:100%;text-align:center;">
         <h1>Hello</h1>
         <p>Dream is normal looking y'all just were hyped up lmao</p>
