--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-    <div class='content' style="width:100%;padding:15px;text-align:center;position:relative;background-color:#FF8D74;color:#FFF;margin:10px;height:auto:min-height:100%;">
+    <div style="width:100%;padding:15px;text-align:center;position:relative;background-color:#FF8D74;color:#FFF;margin:10px;height:auto:min-height:100%;">
         <div style="position: absolute; right: 0;"><a href="#" class="clearfix" style="float:right;color:#FFF;height:10px;">Characters</a></div>
         <h1>Faliouca</h1>
     </div>
