--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-    <div style="width:100%;padding:15px;text-align:center;background-color:#FF8D74;color:#FFF;height:auto:min-height:100%;">
+    <div style="width:100%;padding:15px;text-align:center;background-color:#FF8D74;color:#FFF;">
         <h1>Faliouca</h1>
     </div>
     <div style="width:100%;text-align:center;">
