--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-    <div style="width:100%;text-align:center;background-color:#FF8D74;color:#FFF;">
-        <h1>Faliouca</h1>
+    <div style="width:100%;padding-top:15px;padding-bottom:15px;background-color:#FF8D74;color:#FFF;">
+        <h1 style="margin-left:15px;">Faliouca</h1>
+        <a href="#" style="float:right;margin-right:15px;">Characters</a>
     </div>
     <div style="width:100%;text-align:center;">
         <h1>Hello</h1>
