--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Character stuff lolz</title>
 </head>
 <body>
-    <div style="width:100%;padding-top:15px;padding-bottom:15px;background-color:#FF8D74;color:#FFF;">
-        <h1 style="margin-left:15px;">Faliouca</h1>
-        <a href="#" style="float:right;margin-right:15px;">Characters</a>
+    <div class="topnav">
+        <a class="active" href="#"><h1 style="margin-left:15px;">Faliouca</h1></a>
+        <a href="#">Characters</a>
+        <a href="#">About</a>
     </div>
     <div style="width:100%;text-align:center;">
         <h1>Hello</h1>
