--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="#"><h1 style="margin-left:15px;">Faliouca</h1></a>
+        <a class="active" href="#">Faliouca</a>
         <a href="#">Characters</a>
         <a href="#">About</a>
     </div>
