--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
     <meta charset="utf-8>
     <meta name="description" content="test page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="shortcut icon" type="image/png" href="https://faliouca.github.io/Pf.png">
     <link rel="stylesheet" href="main.css">
     <title>Character stuff lolz</title>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
+    <script>  
+    $(function(){ 
+      $("#header").load("header.html");  
+      $("#footer").load("footer.html");  
+    }); 
+    </script>
 </head>
 <body>
-    <div class="topnav">
-        <a href="#">Faliouca</a>
-        <a href="#">Characters</a>
-        <a href="#">About</a>
-    </div>
+    <div class="header.html"></div>
     <div style="width:100%;text-align:center;">
         <h1>Hello</h1>
         <p>Dream is normal looking y'all just were hyped up lmao</p>
