--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
 </head>
 <body>
-    <div class="header"></div>
+    <div id="header"></div>
     <div style="width:100%;text-align:center;">
         <h1>Hello</h1>
         <p>Dream is normal looking y'all just were hyped up lmao</p>
