--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <div class="topnav">
-    <a href="#">Faliouca</a>
-    <a href="#">Characters</a>
-    <a href="#">About</a>
+    <a href="https://faliouca.github.io">Faliouca</a>
+    <a href="https://faliouca.github.io/characters">Characters</a>
+    <a href="https://faliouca.github.io/about">About</a>
 </div>
