--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <div class="topnav">
-    <a href="www.https://faliouca.github.io">Faliouca</a>
-    <a href="www.https://faliouca.github.io/characters">Characters</a>
-    <a href="www.https://faliouca.github.io/about">About</a>
+    <a href="https://www.faliouca.github.io">Faliouca</a>
+    <a href="https://www.faliouca.github.io/characters">Characters</a>
+    <a href="https://www.faliouca.github.io/about">About</a>
 </div>
