--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
     <div id="header"></div>
     <div style="width:100%;text-align:center;">
-        <h1>Hello</h1>
-        <p>Dream is normal looking y'all just were hyped up lmao</p>
+        <div class="box">
+            
+        </div>
     </div>
 </body>
