--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div id="header"></div>
     <div style="width:100%;text-align:center;">
-        <div class="box">
+        <div class="raiden-shogun">
             
         </div>
     </div>
