--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <div id="header"></div>
     <div style="width:100%;text-align:center;">
-        <div class="raiden-shogun">
-            
+        <div class="raidenshogun">
+            <h1>Hello</h1>
         </div>
     </div>
 </body>
