--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div id="header"></div>
     <div style="width:100%;text-align:center;">
         <div class="raidenshogun">
-            <h1>Hello</h1>
+            <div class="internal">
+                <h1 style="color:white"">Hello</h1>
+            </div>
         </div>
     </div>
 </body>
