--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
 <body>
     <div id="header"></div>
     <div style="width:100%;text-align:center;">
-        <div class="raidenshogun">
-            <div class="internal">
-                <h1 style="color:white"">Hello</h1>
-            </div>
-        </div>
+        <div class="raidenshogun"></div>
     </div>
 </body>
