--- a/header.html
+++ b/header.html
@@ -1,5 +1,10 @@
 <div class="topnav">
     <a href="https://faliouca.github.io">Faliouca</a>
-    <a href="https://faliouca.github.io/characters">Characters</a>
+    <div class="dropdown">
+        <a href="https://faliouca.github.io/characters">Characters</a>
+        <div class="dropdown-content">
+            <p>Hello World!</p>
+        </div>
+    </div>
     <a href="https://faliouca.github.io/about">About</a>
 </div>
