--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
     <div class="dropdown">
         <a href="https://faliouca.github.io/characters">Characters</a>
         <div class="dropdown-content">
-            <p>Hello World!</p>
+            <a href="https://faliouca.github.io/characters">Hello World!</a>
         </div>
     </div>
     <a href="https://faliouca.github.io/about">About</a>
