--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <div class="topnav">
     <a href="https://faliouca.github.io">Faliouca</a>
     <div class="dropdown">
-        <a href="https://faliouca.github.io/characters">Characters</a>
+        <a>Characters</a>
         <div class="dropdown-content">
             <a href="https://faliouca.github.io/characters">Hello World!</a>
         </div>
