--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
     <div class="dropdown">
         <a>Characters</a>
         <div class="dropdown-content">
-            <a href="https://faliouca.github.io/characters">Hello World!</a>
+            <a href="https://faliouca.github.io/characters">All Characters</a>
         </div>
     </div>
     <a href="https://faliouca.github.io/about">About</a>
