--- a/about.html
+++ b/about.html
@@ -16,5 +16,10 @@
 </head>
 <body>
     <div id=header></div>
-    <h1>About</h1>
+    <div style="width:100%">
+      <div style="display:inline-block;width:50%;text-align:center;">
+        <h1>About</h1>
+      </div>
+      <div style="display:inline-block;width:50%;background-color: darkkhaki;background-image:url("https://faliouca.github.io/Caramelarrowfoolsnew.webp");background-position:center;background-repeat:no-repeat;background-size:cover;padding-top:100%;"></div>
+    </div>
 </body>
