--- a/about.html
+++ b/about.html
@@ -20,6 +20,6 @@
     <div style="display:inline-block;width:50%;text-align:center;">
       <h1>About</h1>
     </div>
-    <div style="display:inline-block;width:50%;background-color: darkkhaki;background-image:url("https://faliouca.github.io/Caramelarrowfoolsnew.webp");background-position:center;background-repeat:no-repeat;background-size:cover;padding-top:100%;"></div>
+    <div style="display:inline-block;width:50%;background-color:#bdb76b;background-image:url("https://faliouca.github.io/Caramelarrowfoolsnew.webp");background-position:center;background-repeat:no-repeat;background-size:cover;padding-top:100%;"></div>
   </div>
   </body>
