--- a/main/header.html
+++ b/main/header.html
@@ -7,4 +7,5 @@
         </div>
     </div>
     <a href="https://faliouca.github.io/about">About</a>
+    <a href="https://faliouca.github.io/genshin">Genshin</a>
 </div>
