--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" type="image/png" href="https://faliouca.github.io/Pf.png">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main/main.css">
     <title>Character stuff lolz</title>
     <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
     <script>  
     $(function(){ 
-      $("#header").load("header.html");  
-      $("#footer").load("footer.html");  
+      $("#header").load("/main/header.html");  
+      $("#footer").load("/main/footer.html");  
     }); 
     </script>
 </head>
