--- a/main/header.html
+++ b/main/header.html
@@ -3,9 +3,9 @@
     <div class="dropdown">
         <a>Characters</a>
         <div class="dropdown-content">
-            <a href="https://faliouca.github.io/characters">All Characters</a>
+            <a href="https://faliouca.github.io/main/characters">All Characters</a>
         </div>
     </div>
-    <a href="https://faliouca.github.io/about">About</a>
-    <a href="https://faliouca.github.io/genshin">Genshin</a>
+    <a href="https://faliouca.github.io/main/about">About</a>
+    <a href="https://faliouca.github.io/main/genshin">Genshin</a>
 </div>
